--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,8 @@ body {
 }
 
 .cart-count {
+    line-height: 1;
+    text-align: center;
     position: absolute;
     top: -5px;
     right: -5px;
