--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,7 @@ body {
 
 .cart-count {
     line-height: 1;
+    padding-top: 2px;
     text-align: center;
     position: absolute;
     top: -5px;
