--- a/css/style.css
+++ b/css/style.css
@@ -286,8 +286,8 @@ body {
 }
 
 .cart-count {
-    line-height: 1;
-    padding-top: 3px;
+    line-height: 22px;
+    
     text-align: center;
     position: absolute;
     top: -5px;
